<resources>
    <string name="app_name">VisitSongkhla</string>
    <string name="Language">TH</string>
    <string name="BN1">หลัก</string>
    <string name="BN2">ท่องเที่ยว</string>
    <string name="BN3">เช็คอิน</string>
    <string name="BN4">แผนที่</string>
    <string name="CT1">เมือง</string>
    <string name="CT2">หาดใหญ่</string>
    <string name="CT3">อื่นๆ</string>
    <string name="GPC1">GPS ไม่ได้เปิดใช้งาน</string>
    <string name="GPC2">กรุณาเปิดใช้งาน GPS</string>
    <string name="GPC3">เปิดใช้งาน</string>
    <string name="GPC4">ยกเลิก</string>
    <string name="CH1">ยินดีต้อนรับสู่</string>
    <string name="CH2">VisitSongkhla</string>
    <string name="CH3">ทุกการท่องเที่ยว...อยู่ในมือคุณ</string>
    <string name="CH4">ภาษา</string>
    <string name="CH5">ไทย</string>
    <string name="CH6">อังกฤษ</string>
    <string name="CH7">เข้าใช้งาน</string>
    <string name="HO1">สถานที่ท่องเที่ยว</string>
    <string name="HO2">เพิ่มเติม+</string>
    <string name="HO3">ธีมการท่องเที่ยว</string>
    <string name="HO4">เพิ่มเติม+</string>
    <string name="HO5">ร้านอาหาร</string>
    <string name="HO6">เพิ่มเติม+</string>
    <string name="HOD1_1_mNames">สวนประวัติศาสตร์</string>
    <string name="HOD1_1_mDes">บนเนื้อที่ 150 ไร่ ภายในสวนประวัติศาสตร์พลเอก เปรม ติณสูลานนท์ แห่งนี้ จุความเพลิดเพลินที่น่าเรียนรู้ไว้มากมาย โดยมีการแบ่งพื้นที่ได้อย่างเป็นสัดส่วนที่เปิดโอกาสให้นักท่องเที่ยวได้เลือกชมตามความสนใจเฉพาะตัว ได้แก่
                บริเวณที่ 1 คือหอประวัติ พลเอก เปรม ติณสูลานนท์ เพื่อเชิดชูเกียรติคุณความดีของ ฯพณฯ พลเอก เปรม ติณสูลานนท์ ประธานองคมนตรีและรัฐบุรุษ
                บริเวณที่ 2 ประกอบด้วยสวนสาธารณะ ประติมากรรมกลางแจ้ง สวนพฤกษศาสตร์ สวนตาลโตนด แหล่งน้ำกลางสวน เวทีเปิดอัฒจันทร์ธรรมชาติ ลานวัฒนธรรมกลางแจ้ง ศูนย์จำหน่ายเครื่องดื่ม อาคารบริการท่าเทียบเรือ และศูนย์บริการท่องเที่ยวทางน้ำ
                บริเวณที่ 3 ประกอบด้วยศูนย์บริการการเรียนรู้ระบบนิเวศป่าชายเลน ที่มีสะพานทางเดินศึกษาธรรมชาติชีวภาพป่าชายเลน (Walk way) ความยาว 800 เมตร มีศาลานิทรรศการ 4 ศาลา เพื่อศึกษาหาความรู้เกี่ยวกับป่าชายเลน มีลานพักแรม (Camping) สำหรับนักเรียน นักศึกษา และบุคคลทั่วไป ตลอดจนศูนย์ฝึกอบรม (ศูนย์ส่งเสริมอุตสาหกรรม ภาค 11) อาคารบ้านพักพนักงานและเรือนเพาะชำ</string>
    <string name="HOD1_1_mLocation">อยู่ริมทางหลวงหมายเลข 408 เชิงสะพานเชื่อมเกาะยอ</string>
    <string name="HOD1_2_mNames">เขาตังกวน</string>
    <string name="HOD1_2_mDes">ภูเขาลูกเล็ก ๆ แต่เป็นสถานที่ท่องเที่ยวที่สำคัญแห่งหนึ่งในอ.เมืองฯ โดยเขาตังกวนนั้นเป็นเนินเขาสูงจากระดับทะเลปานกลางประมาณ 2,000 ฟุต จากยอดเขาตังกวนนี้มีลานชมวิวเขาตังกวนที่สามารถมองเห็นทิวทัศน์ของเมืองสงขลาได้โดยรอบ กลายเป็นจุดชมวิวยอดนิยมที่สุดสำหรับนักท่องเที่ยวเมื่อเดินทางมาเยือนสงขลา นอกจากนี้ บนยอดเขาตังกวนเป็นที่ประดิษฐานเจดีย์พระธาตุคู่เมืองสงขลา ซึ่งสร้างในสมัยอาณาจักรนครศรีธรรมราช เป็นศิลปะสมัยทวารวดี โดยพระบาทสมเด็จพระจอมเกล้าเจ้าอยู่หัว รัชกาลที่ 4 ได้พระราชทานเงินหลวง ให้เป็นทุนในการบูรณะปฏิสังขรณ์ และในเดือนธันวาคม พ.ศ. 2539 พระบาทสมเด็จพระเจ้าอยู่หัวรัชกาลปัจจุบัน ได้ทรงพระราชทานพระบรมสารีริกธาตุมาบรรจุในองค์พระเจดีย์ และในเดือนตุลาคมของทุกปี จะมีงานพิธีห่มผ้าองค์พระเจดีย์ และประเพณีตักบาตรเทโว และลากพระของสงขลา</string>
    <string name="HOD1_2_mLocation">เขาตังกวนตั้งอยู่ในตัวเมืองสงขลาใกล้กับหาดสมิหลา</string>
    <string name="HOD1_3_mNames">แหลมสมิหลา</string>
    <string name="HOD1_3_mDes">ถ้ามาถึงสงขลาแล้วไม่ได้เยือนหาดสมิหลาย่อมถือว่ามาไม่ถึง เพราะที่นี่คือไอคอนของเมืองสงขลาที่ทุกคนต้องมาแวะถ่ายภาพไว้เป็นที่ระลึก หาดสมิหลาเป็นชายหาดที่มีโขดหินขนาดย่อมยื่นลงทะเล ทรายขาวละเอียดมากที่เรียกว่า \"ทรายแก้ว\" ร่มรื่นด้วยป่าสน และจากหาดสมิหลายังสามารถมองเห็นทิวทัศน์อันงดงามของเกาะหนูเกาะแมว จนมีคำกล่าวว่าใครมาเยือนสงขลาแล้วไม่มาเยือนสมิหลาก็เหมือนมาไม่ถึงสงขลา อีกทั้งบริเวณหาดยังมีสัญลักษณ์ที่มีชื่อเสียง นั่นก็คือ รูปปั้นนางเงือกทอง ที่ทุกคนต้องแวะมาถ่ายภาพเก็บไว้ บรรยากาศโดยรอบของชายหาดเต็มไปด้วยความเงียบสงบ มีร้านอาหาร รีสอร์ต และร้านขายของที่ระลึกมากมาย รวมทั้งมีกิจกรรมทางน้ำเติมความสนุกให้นักท่องเที่ยว เช่น บานาน่าโบ๊ต เจ็ตสกี แล่นเรือใบ และชายหาดแห่งนี้ยังสามารถลงเล่นน้ำทะเลได้เนื่องจากเป็นชายหาดที่ไม่ลาดชัน และมียามรักษาการณ์จากเทศบาลเมืองสงขลาคอยดูแลความปลอดภัยตลอดทั้งวัน</string>
    <string name="MP7">วัด</string>
    <string name="MP8">ชายหาด</string>
    <string name="MP9">อุทยาน</string>
    <string name="MP10">พิพิธภัณฑ์</string>
    <string name="MP11">ร้านอาหาร</string>
    <string name="MP12">ร้านค้า</string>
    <string name="MP13">ปั๊มน้ํามัน</string>
    <string name="AG1">ข้อกำหนดและเงื่อนไขในการใช้งาน VisitSongkhla</string>
    <string name="AG2">เพื่อปกป้องสิทธิของคุณโปรดอ่านเงื่อนไขการให้บริการทั้งหมดและตกลงที่จะปฏิบัติตามข้อตกลงและเงื่อนไขทั้งหมดต่อไปนี้ของบริการสมาชิก</string>
    <string name="AG3">1. คำนิยาม</string>
    <string name="AG4">คำและข้อความต่อไปนี้จะมีความหมายตามที่กำหนดไว้ด้านล่างนี้เมื่อมีการใช้ในข้อกำหนดและเงื่อนไขฯ</string>
    <string name="AG5">1.1 เนื้อหา หมายถึง ข้อมูล เช่น ข้อความ ไฟล์เสียง เพลง รูปภาพ วิดีโอ ซอฟต์แวร์ โปรแกรม รหัสคอมพิวเตอร์ และสิ่งอื่นๆ ที่คล้ายคลึงกัน</string>
    <string name="AG6">1.2 เนื้อหาฯ หมายถึง เนื้อหาที่สามารถเข้าถึงได้ผ่านทางบริการฯ</string>
    <string name="AG7">1.3 เนื้อหาจากผู้ใช้ หมายถึง เนื้อหาที่ผู้ใช้ได้ส่ง ส่งผ่าน หรือ อัพโหลด</string>
    <string name="AG77">1.4 บริษัทฯ หมายถึง บริษัทผู้ให้บริการ หรือผู้พัฒนา</string>
    <string name="AG8">1.5 เหรียญ หมายถึง สกุลเงินเสมือนจริงซึ่งผู้ใช้สามารถใช้เพื่อชำระเงินสำหรับเนื้อหาและบริการต่างๆ ที่บริษัทฯ เสนอ ซึ่งมีค่าบริการ</string>
    <string name="AG9">1.6 ข้อกำหนดและเงื่อนไขฯ เพิ่มเติม หมายถึง เอกสารที่บริษัทฯ ออกหรืออัพโหลดซึ่งเกี่ยวกับบริการฯ ภายใต้ชื่อ ข้อตกลง แนวทางปฏิบัติ นโยบาย และอื่นๆ ในทำนองเดียวกัน</string>
<string name="AG10">2. การตกลงยอมรับข้อกำหนดและเงื่อนไขฯ</string>
    <string name="AG11">2.1 ผู้ใช้ทุกรายจะต้องใช้บริการฯ ตามข้อกำหนดที่ระบุไว้ในข้อกำหนดและเงื่อนไขฯ ผู้ใช้จะไม่สามารถใช้บริการฯ ได้เว้นเสียแต่ว่า ผู้ใช้ได้ตกลงยอมรับข้อกำหนดและเงื่อนไขฯ การตกลงยอมรับดังกล่าวมีผลสมบูรณ์และเพิกถอนมิได้</string>
    <string name="AG12">2.2 ผู้เยาว์สามารถใช้บริการฯ ได้ต่อเมื่อได้รับความยินยอมจากบิดามารดาหรือผู้ปกครองตามกฎหมายเท่านั้น นอกจากนี้ หากผู้ใช้ใช้บริการฯ แทน หรือ เพื่อวัตถุประสงค์ขององค์กรธุรกิจใดๆ จะถือว่า องค์กรธุรกิจดังกล่าวได้ตกลงยอมรับข้อกำหนดและเงื่อนไขฯ นี้ด้วยแล้ว การตกลงยอมรับดังกล่าวมีผลสมบูรณ์และเพิกถอนมิได้</string>
    <string name="AG13">2.3 การที่ผู้ใช้ใช้บริการฯ ถือว่า ผู้ใช้ได้ตกลงยอมรับข้อกำหนดและเงื่อนไขฯ การตกลงยอมรับดังกล่าวมีผลสมบูรณ์และเพิกถอนมิได้</string>
    <string name="AG14">2.4 หากมีข้อกำหนดและเงื่อนไขฯ เพิ่มเติมสำหรับบริการฯ ผู้ใช้จะต้องปฏิบัติตามข้อกำหนดและเงื่อนไขฯ เพิ่มเติมนั้นด้วยเช่นเดียวกับข้อกำหนดและเงื่อนไขฯ นี้</string>
    <string name="AG15">3. การแก้ไขข้อกำหนดและเงื่อนไขฯ</string>
    <string name="AG16">บริษัทฯ อาจแก้ไขข้อกำหนดและเงื่อนไขฯ หรือ ข้อกำหนดและเงื่อนไขฯ เพิ่มเติม เมื่อบริษัทฯ เห็นว่ามีความจำเป็น โดยไม่ต้องให้คำบอกกล่าวล่วงหน้าแก่ผู้ใช้ การแก้ไขจะมีผลบังคับเมื่อมีการประกาศข้อกำหนดและเงื่อนไขฯ ที่แก้ไข หรือข้อกำหนดและเงื่อนไขฯ เพิ่มเติมที่แก้ไขไว้ในสถานที่ที่เหมาะสมภายในเว็บไซต์ที่บริษัทฯ เป็นผู้ดำเนินงาน การที่ผู้ใช้ใช้บริการฯ ต่อไป ถือว่าผู้ใช้ได้ให้การยอมรับที่มีผลสมบูรณ์และเพิกถอนมิได้ต่อข้อกำหนดและเงื่อนไขฯ ที่แก้ไขแล้ว หรือข้อกำหนดและเงื่อนไขฯ เพิ่มเติมที่แก้ไขแล้ว ผู้ใช้ควรตรวจสอบข้อกำหนดและเงื่อนไขฯ เป็นประจำระหว่างการใช้บริการฯ เนื่องจากอาจไม่มีการแจ้งเตือนแยกต่างหากเกี่ยวกับการแก้ไขข้อกำหนดและเงื่อนไขฯ ดังกล่าว</string>
    <string name="AG17">4. บัญชี</string>
    <string name="AG18">4.1 เมื่อผู้ใช้ให้ข้อมูลเกี่ยวกับตนเองแก่บริษัทฯ ผู้ใช้จะต้องให้ข้อมูลที่เป็นจริง ถูกต้องและครบถ้วนในขณะที่ใช้บริการฯ และปรับปรุงข้อมูลดังกล่าวให้เป็นปัจจุบันอยู่ตลอดเวลา</string>
    <string name="AG19">4.2 หากผู้ใช้ลงทะเบียนรหัสผ่านในขณะที่ใช้บริการฯ ผู้ใช้จะต้องใช้ความระมัดระวังและมีความรับผิดชอบตามสมควรเพื่อไม่ให้มีการใช้รหัสผ่านในลักษณะที่ไม่ชอบด้วยกฎหมาย บริษัทฯ สามารถถือว่ากิจกรรมต่างๆ ที่ดำเนินการโดยใช้รหัสผ่านดังกล่าว เป็นกิจกรรมที่ผู้เป็นเจ้าของรหัสผ่านได้ดำเนินการด้วยตนเอง</string>
    <string name="AG20">4.3 ผู้ใช้งานที่จดทะเบียนใช้บริการฯ สามารถลบบัญชีของตนและเลิกใช้บริการฯ ได้ ไม่ว่าในเวลาใดๆ ก็ตาม</string>
    <string name="AG21">4.4 บริษัทฯ อาจระงับหรือลบบัญชีของผู้ใช้ได้โดยไม่ต้องให้คำบอกกล่าวล่วงหน้าแก่ผู้ใช้ หากบริษัทฯ เห็นว่าผู้ใช้กำลังละเมิดหรือได้ละเมิดข้อกำหนดและเงื่อนไขฯ </string>
    <string name="AG22">4.5 บริษัทฯ สงวนสิทธิที่จะลบบัญชีใดๆ ที่ไม่มีการเปิดใช้งานเป็นเวลา 1 ปีหรือนานกว่านั้นนับตั้งแต่วันที่มีการเปิดใช้งานบัญชีดังกล่าวครั้งล่าสุด โดยไม่ต้องให้คำบอกกล่าวล่วงหน้าใดๆ แก่ผู้ใช้</string>
    <string name="AG23">4.6 สิทธิที่จะใช้บริการของผู้ใช้จะสิ้นสุดลงเมื่อมีการลบบัญชีของผู้ใช้ไม่ว่าด้วยเหตุผลใดๆ ก็ตาม บัญชีจะไม่สามารถกู้คืนมาได้แม้ว่าผู้ใช้จะลบบัญชีของตนโดยไม่ได้ตั้งใจก็ตาม และบริษัทฯ ขอให้ผู้ใช้ตระหนักถึงเรื่องนี้ด้วย</string>
    <string name="AG24">4.7 บัญชีแต่ละบัญชีในบริการฯ มีไว้เพื่อการใช้งานเฉพาะและเป็นของเจ้าของบัญชีแต่เพียงผู้เดียวเท่านั้น ผู้ใช้ไม่สามารถโอนหรือให้ยืมบัญชีของตนแก่บุคคลภายนอกใดๆ และบุคคลภายนอกใดๆ ไม่สามารถรับช่วงบัญชีจากผู้ใช้ได้</string>
    <string name="AG25">5. การคุ้มครองข้อมูลส่วนบุคคล</string>
    <string name="AG26">5.1 บริษัทฯ ให้ความสำคัญแก่ความเป็นส่วนตัวของผู้ใช้ของบริษัทฯ เป็นลำดับแรก</string>
    <string name="AG27">5.2 บริษัทฯ สัญญาว่าจะคุ้มครองความเป็นส่วนตัวและข้อมูลส่วนบุคคลของผู้ใช้ของบริษัทฯ ตาม นโยบายของไลน์ว่าด้วยการคุ้มครองข้อมูลส่วนบุคคล </string>
    <string name="AG28">5.3 บริษัทฯ สัญญาที่จะใช้ความระมัดระวังและความใส่ใจอย่างสูงสุดเกี่ยวกับมาตรการรักษาความปลอดภัยของบริษัทฯ เพื่อให้มีการรักษาความปลอดภัยของข้อมูลใดๆ ของผู้ใช้ ทั้งหมด</string>
    <string name="AG29">ย้อนกลับ</string>
    <string name="AG30">6. การจัดการข้อมูล</string>
    <string name="AG31">6.1 แอปพลิเคชันจะแบ่งปันข้อมูลผู้ใช้ ซึ่งรวมถึงข้อมูลส่วนบุคคล เมื่อใช้งานบริการบางส่วนภายในแอปพลิเคชัน</string>
    <string name="AG32">6.2 แอปพลิเคชันจะไม่เปิดเผยข้อมูลส่วนบุคคลของผู้ใช้แก่บุคคลอื่นโดยมิได้รับความเห็นชอบจากลูกค้า ยกเว้นในกรณีที่จำเป็นต้องเปิดเผยตามกฎหมายหรือกฎระเบียบที่ใช้บังคับ</string>
    <string name="AG33">7. ระบบแผนที่</string>
    <string name="AG34">7.1 แอปพลิเคชันจะขออนุญาติการเข้าถึงตำเเหน่งส่วนบุคคล เมื่อเริ่มต้นใช้งาน</string>
    <string name="AG35">7.2 ข้อควรรับทราบ แอปพลิเคชันจะติดตามผู้ใช้งานในขณะที่มีการใช้งานแอปพลิเคชันตลอดเวลา</string>
    <string name="AG36">8. การปฏิเสธความรับผิด </string>
    <string name="AG37">แอปพลิเคชันจะไม่รับผิดต่อความเสียหายใดๆ รวมถึงความเสียหาย สูญเสีย และค่าใช้จ่ายที่เกิดขึ้นไม่ว่าโดยตรงหรือโดยอ้อมที่เป็นผลหรือสืบเนื่องจากการที่ผู้ใช้เข้าใช้เว็บไซต์และโมบายแอพพลิเคชั่นนี้หรือต่อความเสียหาย สูญเสีย หรือค่าใช้จ่ายที่เกิดจากความล้มเหลวในการใช้งาน ความผิดพลาด การละเว้น การหยุดชะงัก ข้อบกพร่องความไม่สมบูรณ์ของคอมพิวเตอร์</string>
    <string name="PN1">เกี่ยวกับ สงขลา</string>
    <string name="PN2"> สงขลา  ตั้งอยู่ฝั่งตะวันออกของประเทศไทยมาแต่สมัยโบราณ มีชุมชนโบราณและเมืองเก่าแก่ มีโบราณสถาน โบราณวัตถุ ขนบธรรมเนียมประเพณี และการละเล่นพื้นเมือง ศิลปพื้นบ้านเป็นมรดกทางวัฒนธรรมสงขลาเพิ่งปรากฏเป็นครั้งแรกในบันทึกของพ่อค้าและนักเดินเรือชาวอาหรับ-เปอร์เซีย ระหว่าง ปี พ.ศ.1993-2093 ในนามของเมืองซิงกูร์ หรือซิงกอร่า แต่ในหนังสือประวัติศาสตร์ธรรมชาติและการเมืองแห่งราชอาณาจักรสยาม ของนายกิโลลาส แซร์แวส เรียกชื่อเมืองสงขลา ว่า "เมืองสิงขร" จึงมีการสันนิษฐานว่า คำว่า สงขลา เพี้ยนมาจากชื่อ "สิงหลา" (อ่าน สิง-หะ-ลา) หรือสิงขร เหตุผลที่สงขลามีชื่อว่า สิงหลา แปลว่าเมืองสิงห์ โดยได้ชื่อนี้มาจากพ่อค้าชาวเปอร์เซีย อินเดีย แล่นเรือมาค้าขาย ได้เห็นเกาะหนู เกาะแมว เมื่อมองแต่ไกล จะเห็นเป็นรูปสิงห์สองตัวหมอบเฝ้าปากทางเข้าเมืองสงขลา ชาวอินเดียจึงเรียกเมืองนี้ว่า สิงหลา ส่วนไทยเรียกว่า เมืองสทิง เมื่อมลายูเข้ามาติดต่อค้าขายกับเมืองสทิง ก็เรียกว่า เมืองสิงหลา แต่ออกเสียงเพี้ยนเป็นสำเนียงฝรั่งคือ เป็นซิงกอร่า (Singora) ไทยเรียกตามเสียงมลายูและฝรั่งเสียงเพี้ยนเป็นสงขลา อีกเหตุผลหนึ่งอ้างว่า สงขลาเพี้ยนมาจาก "สิงขร" แปลว่า ภูเขา โดยอ้างว่าเมืองสงขลาตั้งอยู่บริเวณเชิงเขาแดง ต่อมาได้มีการพระราชทานนามเจ้าเมืองสงขลาว่า "วิเชียรคีรี" ซึ่งมีความหมายสอดคล้องกับลักษณะภูมิประเทศ</string>
    <string name="PN3">ย้อนกลับ</string>
</resources>