<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Agree">

    <TextView
        android:id="@+id/textTitleAgree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:fontFamily=""
        android:gravity="center"
        android:text="@string/AG1"
        android:textColor="@color/colorPrimary"
        android:textSize="22dp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollViewAgree"
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:padding="3dp"
        android:layout_marginTop="8dp"

        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""
                android:text="@string/AG2"
                android:justificationMode="inter_word"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""

                android:text="@string/AG3"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""

                android:text="@string/AG4"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily=""
                android:text="@string/AG5"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:fontFamily=""
                android:text="@string/AG6"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily=""
                android:text="@string/AG7"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily=""
                android:text="@string/AG77"

                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily=""
                android:text="@string/AG8"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily=""
                android:text="@string/AG9"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:fontFamily=""
                android:text="@string/AG10"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""
                android:text="@string/AG11"

                android:textSize="14dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily=""
                android:text="@string/AG12"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily=""

                android:text="@string/AG13"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily=""

                android:text="@string/AG14"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""

                android:text="@string/AG15"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""
                android:text="@string/AG16"

                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:fontFamily=""
                android:text="@string/AG17"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:fontFamily=""
                android:text="@string/AG18"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""

                android:text="@string/AG19"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""

                android:text="@string/AG20"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""

                android:text="@string/AG21"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""
                android:text="@string/AG22"

                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:fontFamily=""
                android:text="@string/AG23"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:fontFamily=""
                android:text="@string/AG24"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""
                android:text="@string/AG25"

                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""

                android:text="@string/AG26"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:fontFamily=""
                android:text="@string/AG27"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""
                android:text="@string/AG28"
                android:textSize="14dp"

                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""
                android:text="@string/AG30"
                android:textSize="18dp"

                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""
                android:text="@string/AG31"

                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""

                android:text="@string/AG32"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""
                android:text="@string/AG33"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""

                android:text="@string/AG34"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:fontFamily=""
                android:text="@string/AG35"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""
                android:text="@string/AG36"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""
                android:text="@string/AG37"
                android:textSize="14dp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonAgreeBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/AG29"
        android:fontFamily=""
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"/>

</LinearLayout>