<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Home">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">
<LinearLayout
    android:layout_marginTop="15dp"
    android:id="@+id/Li1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="1">
    <TextView
        android:paddingStart="15dp"
        android:drawablePadding="8dp"
        android:textSize="17sp"
        android:drawableLeft="@drawable/icontravel"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="0.5"

        android:fontFamily="@font/viga"
        android:text="@string/HO1"
        android:textColor="@color/darkgrey" />

    <TextView
        android:id="@+id/next1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="100dp"
        android:layout_weight="0"
        android:fontFamily="@font/viga"
        android:gravity="end"
        android:text="@string/HO2"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold" />
</LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:id="@+id/recyclerView"
        android:layout_height="160dp"
        android:orientation="horizontal"
        android:layout_below="@+id/Li1">
    </android.support.v7.widget.RecyclerView>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/Li2"
        android:layout_below="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:paddingStart="15dp"
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/iconthemes"
            android:textSize="17sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/viga"
            android:layout_weight="0.5"
            android:text="@string/HO3"
            android:textColor="@color/darkgrey" />
        <TextView
            android:id="@+id/next2"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="0"
            android:fontFamily="@font/viga"
            android:layout_marginEnd="100dp"
            android:gravity="end"
            android:textStyle="bold"
            android:text="@string/HO4"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:id="@+id/recyclerView2"
        android:layout_height="160dp"
        android:orientation="horizontal"

        android:layout_below="@+id/Li2">
    </android.support.v7.widget.RecyclerView>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/Li3"
        android:layout_below="@+id/recyclerView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:paddingStart="15dp"
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/iconres"
            android:textSize="17sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/viga"
            android:text="@string/HO5"
            android:textColor="@color/darkgrey" />
        <TextView
            android:id="@+id/next3"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="0"
            android:layout_marginEnd="100dp"
            android:gravity="end"
            android:fontFamily="@font/viga"
            android:textStyle="bold"
            android:text="@string/HO6"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:id="@+id/recyclerView3"
        android:layout_height="160dp"
        android:orientation="horizontal"

        android:layout_below="@+id/Li3">
    </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/buttom_navi"/>
</RelativeLayout>