<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Songkhla">

    <TextView
        android:id="@+id/textTitleAgree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:fontFamily=""
        android:gravity="center"
        android:text="@string/PN1"
        android:textColor="@color/colorBlueJean"
        android:textSize="28dp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollViewAgree"
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textTitleAgree"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily=""
                android:text="@string/PN2"
                android:textSize="15dp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonAgreeBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewAgree"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorBlueJean"
        android:text="@string/PN3"
        android:fontFamily=""
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"/>

</android.support.constraint.ConstraintLayout>